--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -7,6 +7,13 @@
 
 <h2> {{project.title}}</h2>
 
+<hr>
+<!-- * Querying tags from template itself using project object -->
+{% for tag in project.tags.all %}
+    <span style="border: 1px solid grey"> {{tag}} </span>
+{% endfor %}
+<hr> 
+
 <br>
 
 <p> {{project.description}} </p>
