--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -19,11 +19,11 @@
 
 <table>
     <tr>
-        <th> ID </th>
         <th> Project </th>
         <th> Votes </th>
         <th> Ratio </th>
         <th> Created At </th>
+        <th> </th>
         <th> </th>
     </tr>
 
@@ -34,6 +34,8 @@
             <td> {{project.vote_total}} </td>
             <td> {{project.vote_ratio}} </td>
             <td> {{project.created_at}} </td>
+            <td> <a href="{% url 'update-project' project.id %}"> Edit </a> </td>
+            <td> <a href="{% url 'delete-project' project.id %}"> Delete </a> </td>
             <td> <a href="{% url 'project' project.id %}"> View </a> </td>
         </tr>
     {% endfor %}
