--- a/templates/main.html
+++ b/templates/main.html
@@ -39,7 +39,7 @@
 
         {% endblock content%}
         
-        <p> Footer </p>
+        <!-- <p> Footer </p> -->
         
     </body>
 </html>
